--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "serve": "vite serve",
     "lint:scripts": "eslint --ext .ts,.tsx src",
     "lint-fix:scripts": "eslint --fix --ext .ts,.tsx src",
     "lint:styles": "stylelint \"src/**/*.css\"",
