--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,10 @@
 name: 'Release'
 on:
+  pull_request:
   push:
     branches:
       - main
+
 jobs:
   semantic-release:
     runs-on: ubuntu-latest
